# ssd_keras_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
models/: VGG_coco_SSD_300x300_iter_400000_model.h5  ssd_keras_object_detector_kwargs.yml
ros/launch/: coco_image_detection_server.launch  coco_image_detection_service.launch  coco_image_test.launch
ros/scripts/: object_detection_test
ros/src/ssd_keras_ros/: __init__.py  models.py  ssd_keras_object_detector.py
ros/src/ssd_keras_ros/ssd_keras/data_generator/: data_augmentation_chain_satellite.py
ros/src/ssd_keras_ros/ssd_keras/eval_utils/: average_precision_evaluator.py  coco_utils.py
ros/src/ssd_keras_ros/ssd_keras/keras_layers/: keras_layer_DecodeDetections.py  keras_layer_DecodeDetectionsFast.py  keras_layer_L2Normalization.py
ros/src/ssd_keras_ros/ssd_keras/models/: keras_ssd300.py  keras_ssd512.py  keras_ssd7.py
